After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765581 - pvrbufferpool: gst_meta_register() parameter wrong
pvrbufferpool: gst_meta_register() parameter wrong
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-04-26 08:53 UTC by kevin
Modified: 2016-04-26 12:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to fix the issue. (944 bytes, patch)
2016-04-26 08:55 UTC, kevin
committed Details | Review

Description kevin 2016-04-26 08:53:49 UTC
More parameter in the function.
Comment 1 kevin 2016-04-26 08:55:46 UTC
Created attachment 326735 [details] [review]
Patch to fix the issue.
Comment 2 Tim-Philipp Müller 2016-04-26 12:45:52 UTC
Thanks for the patch!

commit c9cd32bcea0b7fbc67dade993dd4901171a2c9b4
Author: Song Bing <bing.song@nxp.com>
Date:   Tue Apr 26 16:48:58 2016 +0800

    pvrbufferpool: fix gst_meta_register() parameters
    
    https://bugzilla.gnome.org/show_bug.cgi?id=765581