pvrbufferpool: fix gst_meta_register() parameters

https://bugzilla.gnome.org/show_bug.cgi?id=765581